# llm-observability-lab

./: .dprint.json  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/: label-commenter-config.yml  labeler.yml  pr-branch-labeler.yml  release-drafter.yml  settings.yml  stale.yml
.github/workflows/: build-python.yaml  build-python.yml  issues-labels-comments.yml  project-pr-labeler.yml  prow-lgtm-merge.yml  prow-lgtm-pull.yml  prow.yml  rebase.yml  release-artifacts.yml  release-labels.yml  scorecard.yml  size.yaml
etc/: otel-collector.yaml
src/: app.py  exceptions.py
src/core/: __init__.py  app.py  chain.py
src/models/: __init__.py  anthropic.py  factory.py  llm.py  openai.py
src/telemetry/: __init__.py  resource.py  tracing.py
src/telemetry/providers/: __init__.py  agenta.py  base.py  braintrust.py  factory.py  laminar.py  langfuse.py  langsmith.py  otelcollector.py  traceloop.py
src/version/: __init__.py
